--- a/src/components/structure/list/List.css
+++ b/src/components/structure/list/List.css
@@ -1,14 +1,11 @@
-.tudo{
-    background-color: #fff;
-    border: 20px solid #34526c;
-    border-radius: 15px;
-    width: 40%;
+.tudoview{
+    width: 100%;
     min-height: 20rem;
-    margin: 80px auto;
+    margin: 20px auto;
     display: flex;
     flex-direction: column;
     text-align: center;
-    align-items: center;
+    align-items: stretch;
 }
 
 .div-ok{
